tests/typing/fail/redef-01.rs
use rust_sync::sync;

sync! {
    node oui(hello: int) = (hello)
    where
        hello : int = hello;
}

fn main() {}
