tests/typing/fail/redef-01.stderr
error: variable `hello` is defined twice
 --> tests/typing/fail/redef-01.rs:6:9
  |
6 |         hello : int = hello;
  |         ^^^^^
  |
help: the variable was previously defined here
 --> tests/typing/fail/redef-01.rs:4:14
  |
4 |     node oui(hello: int) = (hello)
  |              ^^^^^
